2006-12-21  Josh Stone  <joshua.i.stone@intel.com>

	PR 3671
	* parse.cxx (parser::parse_global): Allow a maxsize on global arrays.
	* staptree.h (struct vardecl): Add the maxsize field.
	* staptree.cxx (vardecl::vardecl): Init. maxsize.
	(vardecl::set_arity): Don't allow arity 0 when there's a maxsize.
	(vardecl::compatible_arity): Ditto.
	(vardecl::print): Include maxsize in output.
	(target_symbol::print): Ditto.
	* translate.cxx (struct mapvar, mapvar::mapvar): Add maxsize.
	(mapvar::init): Init maps with the given maxsize if specified, else
	keep using MAXMAPENTRIES.
	(mapvar::set): Make the error message give the maxsize.
	(mapvar::add): Ditto, and check for overflow on pmap add.
	(c_unparser::getmap): Pass the maxsize from the vardecl to mapvar.

2006-12-21  David Smith  <dsmith@redhat.com>

	* hash.cxx (find_hash): Added two more options into the hash that
	change the generated C file - '-M' (merge) and '-t' (benchmark
	timing).

2006-12-20  David Smith  <dsmith@redhat.com>

	PR 3519.
	* Makefile.am: Added 'examples' directory to the 'EXTRA_DIST'
	variable so that the examples directory will be added to the
	distribution directory.  Added variables 'SAMPLE_DEST_DIR' and
	'SAMPLE_SRC' and target 'dist-add-samples' to copy some of the
	testsuite sample scripts to the examples directory when creating a
	distribution directory.
	* Makefile.in: Regenerated.
	* systemtap.spec.in: Added 'examples' directory to the %doc list
	so that the examples directory will be installed on a user's
	system.

2006-12-19  Frank Ch. Eigler  <fche@redhat.com>

	PR 3522.
	* tapsets.cxx (dwflpp::emit_address): Call
	_stp_module_relocate only once per session.

	Error message cleanup: duplicate elimination etc.
	* session.h (saved_errors): Store a set of 'em.
	(num_errors): Return set size.  Remove old numeric field.
	Update all callers.
	* elaborate.cxx (systemtap_session::print_errors):
	Print each encountered message just once.
	* staptree (semantic_error): Make msg2 writeable.