@@ -1,0 +1,7 @@
+# Check that specifying an array size gives more room than MAXMAPENTRIES
+
+load_lib "stap_run.exp"
+
+set test "array_size"
+
+stap_run $srcdir/$subdir/$test.stp no_load $all_pass_string -DMAXMAPENTRIES=1
