@@ -1,3 +1,10 @@
+2006-12-22  Josh Stone  <joshua.i.stone@intel.com>
+
+	* buildok/array_size.stp, parseko/array01.stp, parseko/array02.stp,
+	parseko/array03.stp, parseko/array04.stp, transko/array01.stp,
+	systemtap.base/array_size.exp, systemtap.base/array_size.stp:
+	Tests for specifying the size of global arrays.
+
 2006-12-22  David Smith  <dsmith@redhat.com>
 
 	* systemtap.base/cache.exp: Added test to ensure that using '-M'
