@@ -1,3 +1,7 @@
+2006-12-22  Josh Stone  <joshua.i.stone@intel.com>
+
+	* stap.1.in: Document how to specify the size of global arrays.
+
 2006-12-21  Josh Stone  <joshua.i.stone@intel.com>
 
 	PR 3671
